# Rock-Mechanics-Lab-Database

./: .gitignore  README.md  Rock_Mechanics_Lab_Database.code-workspace  main.py  project_structure  pyproject.toml  reduction_144.ipynb  requirements.txt  setup.py
notebooks/: experiment_data_reduction.ipynb  seed_the_Sapienza_Database.ipynb  seed_the_Sapienza_database.ipynb
rock_mechanics_lab_database/api/: __init__.py
rock_mechanics_lab_database/daos/: __init__.py  base_dao.py  block_dao.py  core_sample_dao.py  experiment_dao.py  gouge_dao.py  machine_dao.py  sensor_dao.py
rock_mechanics_lab_database/services/: __init__.py  base_service.py  block_service.py  core_sample_service.py  experiment_service.py  gouge_service.py  machine_service.py  sensor_service.py
rock_mechanics_lab_database/utils/: __init__.py
scripts/: plot_from_additional_measurements_query.py  plot_from_centralized_measurements_query.py  plot_from_query.py  reduction_script.py  seed_database.py  test_add_utrasonic_waveforms.py
src/: Service.py  main.py  reduction_144.ipynb
src/EPS_database.egg-info/: PKG-INFO  SOURCES.txt
src/Rock_Mechanics_Lab_Database.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/daos/: __init__.py  base_dao.py  block_dao.py  core_sample_dao.py  experiment_dao.py  gouge_dao.py  machine_dao.py  sensor_dao.py  some_function_useless_so_far.py
src/models/: block.py  (+4 more)
static/: index.html  scripts.js  styles.css
tests/: conftest.py  test_block_api.py  test_block_service.py  test_experiment_services.py  test_machine_routers.py  test_routers.py  test_services.py
(+20 files in other folders)
